resources/css/scss/sections/_content.scss
//disable scroll when modal open

body.is-visible {
    overflow: hidden;
}

figure {

    &:after {
        content: '';
        background: url(../img/icn-play-circle-wr.svg) no-repeat top center;
        position: absolute;
        background-size: cover;
        display: block;
        transition: all 0.3s ease-in-out;
        top: 40%;
        left: 45%;
    }

    
    &.is-type-video {
        width: 100%;
        height: auto;
        position: relative;

        &:after {
            width: 70px;
            height: 70px;
        }
            
        &.video_thumb {

            &:before {
                background-color: rgba(0,0,0,0.5);
                content: '';
                width: 100%;
                position: absolute;
                background-size: cover;
                height: 100%;
            }

            &:after {
                width: 17px !important;
                height: 17px !important;
            }
        }
        

        &.is_played {
            &:after {
                display: none !important;
            }

            &:hover {
                &:after{                    
                    cursor: pointer;              
                    border: solid 1px #fff;
                    background-color: #fff;
                    box-shadow: 0 0 10px 5px rgba(255,255,255,0.6);
                    -moz-box-shadow: 0 0 10px 5px rgba(255,255,255,0.6);
                    -webkit-box-shadow: 0 0 10px 5px rgba(255,255,255,0.6);
                    -o-box-shadow: 0 0 10px 5px rgba(255,255,255,0.6);
                    border-radius:100px;
                }
            }
        }
    }
}

.page-content {
    .banner_checklist {
            
        .media_flex {
            .icon_wrapper {
                
                border: 2px solid $color-black;
            }

            .media_body {
                h3 {
                            
                    font-size: 14px !important;
                    font-weight: 600 !important;
                }
            }

        }
    }
}
.column_top {
    .mobile_only {
    
        @include media (max-width, 1023px){
            .column_bottom {    
                display: flex;
                justify-content: center;
            }
        }
    
        @include media (max-width, 375px) {
            .call_carol_col p{
                font-size: 10px !important;
            }
            .call_carol_num p{
                font-size: 36px !important;
            }
        }
    }

}


//seller tips video slide up

.video_container {
    color: $color-white;
    width: 490px;
    height: 165px;
    position: absolute;
    z-index: 999999;
    right: -110px;
    background-color: rgba(0,0,0,0.8);
    overflow: hidden;
    transform: translate(-44%, 0%);
    bottom: 0;
    transition: all 250ms cubic-bezier(0.55, 0, 0.1, 1);
    padding: 15px 15px;

    .video_header {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        text-transform: uppercase;
        padding: 10px 10px 20px;

        .video_header_title {
            font-size: 14px;
            font-weight: 600;
            
            &:not(span){                
                letter-spacing: 4px;
            }

            @include media(max-width, 1023px){
                font-weight: 400;
            }
        }

        .video_header_toggle {
            font-size: 11px;
            font-weight: 800;
            
            a {
                color: $color-white;
                span {
                    font-size: 14px;
                    padding-left: 10px;
                    color: $color-primary;
                }

                .video_toggle_open {
                    display: block;
                }
                        
                .video_toggle_close {
                    display: none;
                }
            }

        }
    }
    
    .video_body {

        max-height: 730px;
        overflow-y: auto;    

        &::-webkit-scrollbar {
            width: 3px;
        }
        
        &::-webkit-scrollbar-track {
            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
        }
        
        &::-webkit-scrollbar-thumb {
            border-radius: 3px;
            background-color: rgba(134, 134, 134, 1);
        }

        .video_lists_wrap {     
            height: 100%;
            a {
                color: $color-white;
            }
        }
        
        .video_item{
            cursor: pointer;
            padding: 10px 20px;
            border-bottom: 1px solid rgba(219, 50, 63, 0.1);

            &.media_flex {
                
                align-items: center;
            }

            .media_left {
                padding-right: 10px;
                border-right: 3px solid $color-primary;
                margin-right: 20px;
                background-color: #000;
            }

            .media_body {
                span {
                    display: block;
                    font-weight: 400;

                    &.video_cat {
                        text-transform: uppercase;
                        font-size: 11px;
                    }
                    &.video_title {
                        text-transform: capitalize;
                        font-family: $heading-font-family;
                        font-size: 20px;
                    }

                }
            }
            &:hover {                
                background-color: rgba(0,0,0,0.3);
            }

        }

    }
    

    &.show_tab {
        height: auto;
        overflow: visible;

        .video_toggle_open {
            display: none!important;
        }
        .video_toggle_close {
            display: block!important;
        }
    }

    @include media(max-width,1023px){
        transform: translate(0%, 0%);
        width: 100%;
        position: relative;
        height: 100%;
        overflow: visible;
        background: rgba(22, 31, 30, 0.8);
    }

}    

.modal {
    position: absolute;
    z-index: 9999; /* 1 */
    top: 0;
    left: 0;
    visibility: hidden;
    width: 100%;
    height: 100%;

    &.is-visible {
        visibility: visible;
        .modal-overlay {
            opacity: 1;
            visibility: visible;
            transition-delay: 0s;
          }
          .modal-transition {
            transform: translateY(0);
            opacity: 1;
          }
          
    }
    
    .modal-overlay {
        position: fixed;
        z-index: 10;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        background: hsla(0, 0%, 0%, 0.8);
        visibility: hidden;
        opacity: 0;
        transition: visibility 0s linear 0.3s, opacity 0.3s;
    }

    .modal-wrapper {
        position: fixed;
        z-index: 9999;
        top: 6em;
        right: 0;
        left: 0;
        width: 70%;
        margin: 0 auto;
        background-color: transparent;
        
            
        .modal-header {
            position: relative;
            background-color: transparent;
        }
        
        .modal-close {
            position: absolute;
            top: -60px;
            right: -110px; 
            padding: 1em;
            color: #fff;
            background: none;
            border: 0;

            span {
                font-size: 0;
            }

            &:before {
                content: "";
                position: absolute;
                -webkit-box-shadow: none;
                box-shadow: none;
                left: 14px;
                top: 24px;
                height: 3px;
                -webkit-transform: rotate(-45deg);
                transform: rotate(-45deg);
                border-bottom: 0;
                width: 24px;
                border-top: 2px solid #DB323F;
            }


            &:after {
                content: "";
                position: absolute;
                width: 24px;
                left: 14px;
                top: 24px;
                -webkit-transform: rotate(45deg);
                transform: rotate(45deg);
                border-top: 2px solid #DB323F;
            }

        }
        
        .modal-transition {
            transition: all 0.3s 0.12s;
            transform: translateY(-10%);
            opacity: 0;
        }

        .modal-body {
            position: relative;
            height: 0;
            padding-bottom: 56.34%;
            overflow: hidden;

            iframe {
                height: 100%;
                position: absolute;
                top: 0;
                width: 100%;
                left: 0;
            }

        }
        
      }
}

@media(min-width: 1024px) and (max-width: 1600px){
body.is-visible .video_container {
    transform: translate(-29%, 0%);
    bottom: -200px;
}
}

